--- a/.eslintrc
+++ b/.eslintrc
@@ -1,20 +1,6 @@
 {
-  "env": {
-    "es2021": true,
-    "node": true
-  },
-  "extends": [
-    "plugin:react/recommended",
-    "eslint:recommended",
-    "airbnb-base"
-  ],
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
+  "extends": "airbnb-base",
   "rules": {
-    "no-console": "off",
-    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
-    "consistent-return": "off"
+    "no-underscore-dangle": ["error", { "allow": ["_id"]}]
   }
 }
